--- a/classes.html
+++ b/classes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +10,55 @@
     <link rel="shortcut icon" href="img/letra-c.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <audio src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3" autoplay></audio>
-    <a href="index.html">Menu</a>
+    <audio
+        src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3"
+        autoplay></audio>
     <h1>Calamity Classes</h1>
     <img src="img/classes.jpg" alt="" height="200">
     <ul>
-        <li class="">Melee</li>
-        <img src="img/melee.jpg" alt="">
-        <p>Melee ou corpo-a-corpo é uma das classes favoritas do pessoal por conta que ela
-            é a classe com maior variedade de armas e armaduras
-        </p>
-
-        <li>Ranger</li>
-        <img src="img/Captura de tela 2024-02-23 162421.png" alt="">
-        <p>Ranger ou longa distancia é uma classe que como ja diz foca em ataques a logas distancias
-            eles podem variar desde um simples arco até uma metralhadora de dinheiro tudo dependo do
-            caminho que você queira seguir
-        </p>
+        <li>Classes existentes:</li>
+        <li>Melee, Ranger, Sumonner, Mage</li>
+        <br>
+        <div class="classe">
+            <h3 class="classes">Melee</h3>
+            <img src="img/melee.jpg" alt="">
+            <p>Melee ou corpo-a-corpo é uma das classes favoritas do pessoal por conta que ela
+                é a classe com maior variedade de armas e armaduras consiste em ter uma maior defesa
+                e tambem dano massivo, sendo elas espadas, maças e lanças. Já as armaduras podem fazer
+                com que inimigos foquem mais em você por maior defesa
+            </p>
+        </div>
+        <br>
+        <div class="classe">
+            <h3 class="classes">Ranger</h3>
+            <img src="img/Captura de tela 2024-02-23 162421.png" alt="">
+            <p>Ranger ou longa distancia é uma classe que como ja diz foca em ataques a logas distancias
+                eles podem variar desde um simples arco até uma metralhadora de dinheiro tudo dependo do caminho que
+                você queira seguir
+            </p>
+        </div>
+        <br>
+        <div class="classe">
+            <h3 class="classes">Summoner</h3>
+            <img src="img/summoner.jpg" alt="">
+            <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
+                ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
+                marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
+            </p>
+        </div>
+        <br>
+        <div class="classe">
+            <h3 class="classes">O Mago</h3>
+            <img src="img/cultista.webp" alt="">
+            <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
+                ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
+                marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
+            </p>
+        </div>
     </ul>
-
+    <a href="index.html">Menu</a>
 </body>
+
 </html>
