--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,19 @@
     <link rel="shortcut icon" href="img/letra-c.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <audio src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3" autoplay></audio>
+    <audio
+        src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3"
+        autoplay></audio>
     <h1>Calamity mod</h1>
-    <p>Calamity</p>
+    <p id="start">Calamity</p>
+    <div>
+        <p>Calamity um mod para quem quer um desafio a mais...</p>
+        <p>Se é que você me entende</p>
+    </div>
+    <p>Calamity <span>um mod</span> para quem quer um desafio a mais...</p>
     <a href="classes.html">Classes</a>
 </body>
+
 </html>
