--- a/classes.html
+++ b/classes.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body id="body2">
     <audio
-        src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3"
+        src="sound/Maxwell the Cat Theme..mp3"
         autoplay></audio>
     <h1>Calamity Classes</h1>
     <img src="img/classes.jpg" alt="" height="200">
@@ -57,8 +57,10 @@
                 marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
             </p>
         </div>
+        <a href="index.html">
+            <button class="botao">Menu</button>
+        </a>
     </ul>
-    <a href="index.html">Menu</a>
 </body>
 
 </html>
