--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body id="body1">
     <audio
         src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3"
         autoplay></audio>
@@ -22,7 +22,9 @@
         <p>Se é que você me entende</p>
     </div>
     <p>Calamity <span>um mod</span> para quem quer um desafio a mais...</p>
-    <a href="classes.html">Classes</a>
+    <a href="classes.html">
+        <button class="botao">Classes</button>
+    </a>
 </body>
 
 </html>
