--- a/classes.html
+++ b/classes.html
@@ -15,52 +15,87 @@
     <audio
         src="sound/Maxwell the Cat Theme..mp3"
         autoplay></audio>
-    <h1>Calamity Classes</h1>
+    
+    <header>
+        <br>
+        <nav>
+            <a href="index.html">
+                <button class="botao">Menu</button>
+            </a>
+            <a href="bosses.html">
+                <button class="botao">Bosses</button>
+            </a>
+            <a href="https://calamitymod.wiki.gg/wiki/Calamity_Mod_Wiki">
+                <button class="botao">Mais detalhes</button>
+            </a>
+            <h1>Calamity Classes</h1>
+            <p id="start">Calamity</p>
+        </nav>
+    </header>
     <img src="img/classes.jpg" alt="" height="200">
-    <ul>
-        <li>Classes existentes:</li>
-        <li>Melee, Ranger, Sumonner, Mage</li>
-        <br>
-        <div class="classe">
-            <h3 class="classes">Melee</h3>
-            <img src="img/melee.jpg" alt="">
-            <p>Melee ou corpo-a-corpo é uma das classes favoritas do pessoal por conta que ela
-                é a classe com maior variedade de armas e armaduras consiste em ter uma maior defesa
-                e tambem dano massivo, sendo elas espadas, maças e lanças. Já as armaduras podem fazer
-                com que inimigos foquem mais em você por maior defesa
-            </p>
-        </div>
-        <br>
-        <div class="classe">
-            <h3 class="classes">Ranger</h3>
-            <img src="img/Captura de tela 2024-02-23 162421.png" alt="">
-            <p>Ranger ou longa distancia é uma classe que como ja diz foca em ataques a logas distancias
-                eles podem variar desde um simples arco até uma metralhadora de dinheiro tudo dependo do caminho que
-                você queira seguir
-            </p>
-        </div>
-        <br>
-        <div class="classe">
-            <h3 class="classes">Summoner</h3>
-            <img src="img/summoner.jpg" alt="">
-            <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
-                ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
-                marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
-            </p>
-        </div>
-        <br>
-        <div class="classe">
-            <h3 class="classes">O Mago</h3>
-            <img src="img/cultista.webp" alt="">
-            <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
-                ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
-                marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
-            </p>
-        </div>
-        <a href="index.html">
-            <button class="botao">Menu</button>
-        </a>
-    </ul>
+    <main>
+        <ul>
+            <section>
+                <li>Classes existentes:</li>
+                <li>Melee, Ranger, Sumonner, Mage</li>
+                <br>
+                <div class="classe">
+                    <h3 class="classes">Melee</h3>
+                    <img src="img/melee.jpg" alt="">
+                    <p>Melee ou corpo-a-corpo é uma das classes favoritas do pessoal por conta que ela
+                        é a classe com maior variedade de armas e armaduras consiste em ter uma maior defesa
+                        e tambem dano massivo, sendo elas espadas, maças e lanças. Já as armaduras podem fazer
+                        com que inimigos foquem mais em você por maior defesa
+                    </p>
+                </div>
+                <br>
+            </section>
+            <section>
+                <div class="classe">
+                    <h3 class="classes">Ranger</h3>
+                    <img src="img/Captura de tela 2024-02-23 162421.png" alt="">
+                    <p>Ranger ou longa distancia é uma classe que como ja diz foca em ataques a logas distancias
+                        eles podem variar desde um simples arco até uma metralhadora de dinheiro tudo dependo do caminho que
+                        você queira seguir
+                    </p>
+                </div>
+                <br>
+            </section>
+            <section>
+                <div class="classe">
+                    <h3 class="classes">Summoner</h3>
+                    <img src="img/summoner.jpg" alt="">
+                    <p>Mago é uma classe baseada no sistema de mana que dependendo do ataque você vai gastar mais mana
+                        provavelmente por seu poder destrutivel
+                    </p>
+                </div>
+                <br>
+            </section>
+            <section>
+                <div class="classe">
+                    <h3 class="classes">O Mago</h3>
+                    <img src="img/cultista.webp" alt="">
+                    <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
+                        ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
+                        marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
+                    </p>
+                </div>
+            </section>
+        </ul>
+    </main>
 </body>
 
+    <footer>
+        <nav>
+            <a href="index.html">
+                <button class="botao">Menu</button>
+            </a>
+            <a href="bosses.html">
+                <button class="botao">Bosses</button>
+            </a>
+            <a href="https://calamitymod.wiki.gg/wiki/Calamity_Mod_Wiki">
+                <button class="botao">Mais detalhes</button>
+            </a>
+        </nav>
+    </footer>
 </html>
