--- a/index.html
+++ b/index.html
@@ -15,16 +15,43 @@
     <audio
         src="sound/Terraria Infernum Mod Music- _Shining Kaleidoscope ~ Prismatic Radiance_ - Theme of Empress of Light.mp3"
         autoplay></audio>
-    <h1>Calamity mod</h1>
-    <p id="start">Calamity</p>
-    <div>
-        <p>Calamity um mod para quem quer um desafio a mais...</p>
-        <p>Se é que você me entende</p>
-    </div>
-    <p>Calamity <span>um mod</span> para quem quer um desafio a mais...</p>
-    <a href="classes.html">
-        <button class="botao">Classes</button>
-    </a>
+    <header>
+        <nav>
+            <br>
+            <a href="classes.html">
+                <button class="botao">Classes</button>
+            </a>
+            <a href="bosses.html">
+                <button class="botao">Bosses</button>
+            </a>
+            <a href="https://calamitymod.wiki.gg/wiki/Calamity_Mod_Wiki">
+                <button class="botao">Mais detalhes</button>
+            </a>
+            <h1>Calamity mod</h1>
+            <p id="start">Calamity</p>
+        </nav>    
+    </header>
+    <main>
+        <section>
+            <div>
+                <p>Calamity um mod para quem quer um desafio a mais...</p>
+                <p>Se é que você me entende</p>
+            </div>
+            <p>Calamity <span>um mod</span> para quem quer um desafio a mais...</p>
+        </section>
+    </main>
 </body>
-
+    <footer id="index">
+        <nav>
+            <a href="classes.html">
+                <button class="botao">Classes</button>
+            </a>
+            <a href="bosses.html">
+                <button class="botao">Bosses</button>
+            </a>
+            <a href="https://calamitymod.wiki.gg/wiki/Calamity_Mod_Wiki">
+                <button class="botao">Mais detalhes</button>
+            </a>
+        </nav>
+    </footer>
 </html>
