--- a/bosses.html
+++ b/bosses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="site sobre as classes do Calamity feito em aula">
+    <meta name="description" content="site sobre os bosses do Calamity feito em aula">
     <meta name="author" content="André Orocondo Lopes Aguirre">
     <title>Calamity Bosses</title>
     <link rel="shortcut icon" href="img/letra-c.png" type="image/x-icon">
