--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="site sobre o Calamity feito em aula">
     <meta name="author" content="André Orocondo Lopes Aguirre">
-    <title>Camality insano</title>
+    <title>O menino calistenoco</title>
     <link rel="shortcut icon" href="img/letra-c.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -27,9 +27,9 @@
             <a href="https://calamitymod.wiki.gg/wiki/Calamity_Mod_Wiki">
                 <button class="botao">Mais detalhes</button>
             </a>
-            <h1>Calamity mod</h1>
-            <p id="start">Calamity</p>
-        </nav>    
+        </nav>   
+        <h1>Calamity mod</h1>
+        <p id="start">Calamity</p>
     </header>
     <main>
         <section>
