--- a/bosses.html
+++ b/bosses.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="site sobre as classes do Calamity feito em aula">
     <meta name="author" content="André Orocondo Lopes Aguirre">
-    <title>Calamity Bosses</title>
+    <title>Calamity Bosse</title>
     <link rel="shortcut icon" href="img/letra-c.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -36,7 +36,7 @@
                 <h3>Desert Scourge</h3>
                 <img class="boss" src="img/Desert_Scourge.webp" alt="">
                 <p>
-                    O Desert Scourge é um boss que pode ser spawnado no deserto pelo item Desert Medallion
+                    O Desert Scourge é um boss que pode ser spawnado no deserto pelo item Desert Medallion ou seja ele é o minhocão mortifero da morte matadora
                     <img class="boss" src="img/Desert_Medallion.webp" alt="">
                     <br>
                     Seus ataques consistem em avançar para cima do player e atirar
