--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="site sobre o Calamity feito em aula">
     <meta name="author" content="André Orocondo Lopes Aguirre">
-    <title>O menino calistenoco</title>
+    <title>O menino calamitoso</title>
     <link rel="shortcut icon" href="img/letra-c.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
