--- a/classes.html
+++ b/classes.html
@@ -65,8 +65,9 @@
                 <div class="classe">
                     <h3 class="classes">Summoner</h3>
                     <img src="img/summoner.jpg" alt="">
-                    <p>Mago é uma classe baseada no sistema de mana que dependendo do ataque você vai gastar mais mana
-                        provavelmente por seu poder destrutivel
+                    <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
+                        ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
+                        marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
                     </p>
                 </div>
                 <br>
@@ -75,9 +76,8 @@
                 <div class="classe">
                     <h3 class="classes">O Mago</h3>
                     <img src="img/cultista.webp" alt="">
-                    <p>Summoner ou invocador é uma classe que consiste em invocar lacaios para lutarem com você
-                        ou para você, a variedade de armas não e muito grande sendo elas chicote e summons chicotes podem 
-                        marcar os inimigos que faz com que seus lacaios ataquem com preferencia e maior dano o alvo
+                    <p>Mago é uma classe baseada no sistema de mana que dependendo do ataque você vai gastar mais mana
+                        provavelmente por seu poder destrutivel.
                     </p>
                 </div>
             </section>
